search not found result in the apurva explain alignment fix and coming soon in impact stories alignment fix

--- a/source/css/apurva.css
+++ b/source/css/apurva.css
@@ -2514,8 +2514,22 @@ ul.social_icon li a {
     font-size: 20px;
     line-height: 35px;
   }
+
+  .impact-coming-soon {
+    font-size: 35px;
+  }
+
+  .search-not-found {
+    font-size: 20px;
+    margin-left: 15px;
+  }
 }
 
+@media (max-width: 375px) {
+  .search-not-found {
+    margin-left: 15px;
+  }
+}
 @media (min-width: 320px) and (max-width: 770px) {
   .nav-item #pills-home-tab {
     font-size: 33px;
@@ -2750,4 +2764,14 @@ ul.social_icon li a {
 .category h5 {
   margin-top: -2rem;
   color: #767676;
+}
+
+@media (min-width: 425px) {
+  .impact-coming-soon {
+    margin-left: 35px;
+  }
+
+  .search-not-found {
+    margin-left: 30px;
+  }
 }
