--- a/source/css/style.css
+++ b/source/css/style.css
@@ -912,7 +912,7 @@ nav .btn-setting {
 }
 /* logo */
 .logo {
-  max-width: 140px;
+  max-width: 250px;
 }
 .logo img {
   vertical-align: middle;
